# Tool_SnapLaunch

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
docs/: captions.en.vtt  captions.ko.vtt  index.html
src/: app.rs  i18n.rs  launcher.rs  main.rs  msgbox.rs  path_util.rs
src/config/: mod.rs  tools.rs
src/registry/: install.rs  mod.rs  status.rs  uninstall.rs
src/ui/: control_bar.rs  mod.rs  style.rs  tool_form.rs  tool_list.rs
tools/: gen_icon.py
