[package]
name = "snap-launch"
version = "1.0.0"
edition = "2021"
description = "Windows 컨텍스트 메뉴 즐겨찾기 툴"
authors = ["SnapLaunch"]

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.29"
winreg = "0.52"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_System_Com",
]}

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
